syntax = "proto3";

package kraken;

// KrakenRequestメッセージ
message KrakenRequest {
    string collector_name = 1;
    string content_type = 2; // ペイロードのコンテンツタイプ
    string metadata = 3;     // ペイロードのメタ情報
    bytes payload = 4;       // ペイロードデータ
}

// KrakenResponseメッセージ
message KrakenResponse {
    string collector_name = 1;
    string content_type = 2; // ペイロードのコンテンツタイプ
    string metadata = 3;     // ペイロードのメタ情報
    bytes payload = 4;       // ペイロードデータ
}

// KrakenServiceサービス
service KrakenService {
    rpc ProcessKrakenRequest (KrakenRequest) returns (KrakenResponse);
}
